with session and firsts posts

--- a/views/createPostPage.ejs
+++ b/views/createPostPage.ejs
@@ -2,9 +2,9 @@
 
 <div id="mainCreate" class="main">
 
-    <form id="creatingPost" class="entryForm" method="post" action="/create">
+    <form id="creatingPost" class="entryForm" method="post" action="/createArticle">
         <input id="title" name="title" required type="text" placeholder="Title">
-        <textarea id="content" name="title" required placeholder="Type your text ..."></textarea>
+        <textarea id="content" name="content" required placeholder="Type your text ..."></textarea>
         <div class="formularButtons">
             <input id="CreateButton" class="button" type="submit" value="Create">
         </div>
