--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -30,7 +30,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/create">
+                    <a href="/createArticle">
                         Add Post
                     </a>
                 </li>
@@ -60,7 +60,7 @@
 
     <!--Profil-->
     <div id="headerContentFourth" class="component">
-        <a href="/user/<%=client.id%>">
+        <a href="/user/<%=client.userId%>">
             <div class="clientAuthor">
                 <div class="clientAuthorPic">
                     <div class="img" style="background-image: url('<%=client.profilPic%>')"></div>
