--- a/public/assets/css/scss/partials/comment.scss
+++ b/public/assets/css/scss/partials/comment.scss
@@ -35,3 +35,9 @@
 .commentFooter{
   clear: both;
 }
+
+.commentHead .containerButtonsModify{
+  width: 10%;
+  float: right;
+  margin-right: 20px;
+}
