--- a/public/assets/css/scss/partials/responseComment.scss
+++ b/public/assets/css/scss/partials/responseComment.scss
@@ -3,7 +3,9 @@
   min-height: 100px;
 }
 
-.responseCommentButton{
+.responseCommentSubmit{
   float: right;
-  margin-right: 20px;
+  margin-right: 10px;
+  width: 80px;
+  height: 80px;
 }
