--- a/views/partials/comment.ejs
+++ b/views/partials/comment.ejs
@@ -8,7 +8,21 @@
                 <span class="commentAuthorName"><%=comment.username%></span>
             </div>
         </a>
-        <span class="commentDate"><%=moment(comment.date_publish).format("H[h le ]D/M")%></span>
+        <div class="containerButtonsModify">
+            <%if(comment.userId == client.userId || client.admin != 0){%>
+            <div class="commentPut buttonModify">
+                <a>
+                    <div class="img imgPut"></div>
+                </a>
+            </div>
+            <div class="commentDel buttonModify">
+                <a>
+                    <div class="img imgDel"></div>
+                </a>
+            </div>
+            <%}%>
+        </div>
+        <span class="commentDate"><%=moment(comment.date_publish).format("H[h]mm[ le ]D/M")%></span>
     </div>
 
     <div class="commentContainer">
