--- a/views/partials/responseComment.ejs
+++ b/views/partials/responseComment.ejs
@@ -2,15 +2,17 @@
     <div class="responseCommentHead commentHead">
         <div class="responseCommentAuthor commentAuthor">
             <div class="responseCommentAuthorPic commentAuthorPic">
-                <div class="img" style="background-image: url('<%=client.imgUrl%>')"></div>
+                <div class="img" style="background-image: url('<%=client.profilPic%>')"></div>
             </div>
             <span class="responseCommentAuthorName"><%=client.username%></span>
         </div>
     </div>
 
     <div class="responseCommentContent">
-        <form class="responseCommentForm" action="" method="post">
-            <textarea class="responseCommentTextArea" placeholder="Type your comment ..." required ></textarea>
+        <form class="responseCommentForm" action="/createComment" method="post">
+            <input type="hidden" name="articleId" value="<%=article.id%>">
+            <input type="submit" value="Submit" class="responseCommentSubmit">
+            <textarea class="responseCommentTextArea" name="content" placeholder="Type your comment ..." required ></textarea>
         </form>
     </div>
 </div>
