--- a/views/partials/comment.ejs
+++ b/views/partials/comment.ejs
@@ -10,12 +10,12 @@
         </a>
         <div class="containerButtonsModify">
             <%if(comment.userId == client.userId || client.admin != 0){%>
-            <div class="commentPut buttonModify">
+            <div class="commentPut buttonModify button">
                 <a>
                     <div class="img imgPut"></div>
                 </a>
             </div>
-            <div class="commentDel buttonModify">
+            <div class="commentDel buttonModify button">
                 <a>
                     <div class="img imgDel"></div>
                 </a>
