--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -38,6 +38,29 @@ textarea {
   display: block;
   margin: auto; }
 
+.button {
+  margin: 10px 0 10px 0;
+  border: 0;
+  -moz-box-shadow: 2px 2px 2px 0px #656565;
+  -webkit-box-shadow: 2px 2px 2px 0px #656565;
+  -o-box-shadow: 2px 2px 2px 0px #656565;
+  box-shadow: 2px 2px 2px 0px #656565;
+  filter: progid:DXImageTransform.Microsoft.Shadow(color=#656565, Direction=134, Strength=2); }
+
+.button:hover {
+  -moz-box-shadow: 3px 3px 2px 0px #656565;
+  -webkit-box-shadow: 3px 3px 2px 0px #656565;
+  -o-box-shadow: 3px 3px 2px 0px #656565;
+  box-shadow: 3px 3px 2px 0px #656565;
+  filter: progid:DXImageTransform.Microsoft.Shadow(color=#656565, Direction=134, Strength=2); }
+
+.button:active {
+  -moz-box-shadow: 0 0;
+  -webkit-box-shadow: 0 0;
+  -o-box-shadow: 0 0;
+  box-shadow: 0 0;
+  filter: progid:DXImageTransform.Microsoft.Shadow(color=#656565, Direction=134, Strength=20); }
+
 #header {
   position: fixed;
   top: 0;
@@ -98,17 +121,19 @@ textarea {
 .entryForm input {
   width: 50%;
   height: 10vh;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
   border-radius: 10px; }
 
 .formularButtons {
   width: 50%;
   margin: auto;
   display: flex;
-  justify-content: space-around; }
+  justify-content: space-around;
+  flex-wrap: wrap; }
 
 .formularButtons input {
-  width: 40%;
-  margin: 0; }
+  width: 40%; }
 
 .article {
   width: 60%;
@@ -246,6 +271,20 @@ footer {
 .copyright li {
   margin: 0 20px 0 20px; }
 
+#mainError {
+  text-align: center; }
+
+#submitError {
+  margin: 20px 0 20px 0;
+  width: 100%; }
+
+#submitError textarea {
+  width: 80%;
+  height: 30vh; }
+
+#envoyer {
+  height: 50px; }
+
 #mainIndex input {
   margin-bottom: 4%; }
 
@@ -266,6 +305,15 @@ footer {
   margin-bottom: 1%; }
 
 #signinButton {
+  background-color: palegreen; }
+
+#mainClient #imgProfil, #mainClient #imgCover {
+  height: 40px; }
+
+#passwordButton {
+  background-color: palegreen; }
+
+#applyButton {
   background-color: palegreen; }
 
 #mainArticle .articleContent {
@@ -295,10 +343,31 @@ footer {
   overflow: auto;
   max-height: 70%;
   font-size: 0.8em;
-  border: 1px solid black; }
+  border: 1px solid black;
+  text-align: center; }
 
 .introduce p {
   padding: 20px; }
+
+.formIntroduce {
+  margin-bottom: 10px;
+  display: none; }
+
+#introduceSubmit {
+  margin: auto;
+  width: 20%; }
+
+.introduceTextArea {
+  width: 80%;
+  height: 30vh;
+  margin-bottom: 10px; }
+
+.buttonModifyIntroduce {
+  height: 20px;
+  width: 20px; }
+
+#textAreaButton {
+  background-color: palegreen; }
 
 .backgroundWrapper {
   height: 30%;
