--- a/public/assets/css/scss/pages/userPage.scss
+++ b/public/assets/css/scss/pages/userPage.scss
@@ -21,10 +21,36 @@
   max-height : 70%;
   font-size: 0.8em;
   border: 1px solid black;
+  text-align: center;
 }
 
 .introduce p{
   padding: 20px;
+}
+
+.formIntroduce{
+  margin-bottom: 10px;
+  display: none;
+}
+
+#introduceSubmit{
+  margin: auto;
+  width: 20%;
+}
+
+.introduceTextArea{
+  width: 80%;
+  height: 30vh;
+  margin-bottom: 10px;
+}
+
+.buttonModifyIntroduce{
+  height: 20px;
+  width: 20px;
+}
+
+#textAreaButton{
+  background-color: palegreen;
 }
 
 .backgroundWrapper{
