--- a/public/assets/css/scss/partials/entryFormular.scss
+++ b/public/assets/css/scss/partials/entryFormular.scss
@@ -2,6 +2,8 @@
 .entryForm input{
   width: 50%;
   height: 10vh;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
   border-radius: 10px;
 }
 
@@ -10,9 +12,9 @@
   margin: auto;
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .formularButtons input{
   width: 40%;
-  margin: 0;
 }
