With Del, Working Put

--- a/public/assets/css/scss/partials/article.scss
+++ b/public/assets/css/scss/partials/article.scss
@@ -44,10 +44,8 @@
   width: 20px;
 }
 
-.containerButtonsModify a{
-  display: block;
-  width: 100%;
-  height: 100%;
+.buttonModify input{
+  border: 0;
 }
 
 //CONTENT
