--- a/views/articlesPage.ejs
+++ b/views/articlesPage.ejs
@@ -9,5 +9,6 @@
 </div>
 
 <script type="text/javascript" src="/assets/js/articlesCountHeight.js"></script>
+<script type="text/javascript" src="/assets/js/modifyContentForm.js"></script>
 
 <% include partials/footer %>
