--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -173,10 +173,8 @@ textarea {
   height: 100%;
   width: 20px; }
 
-.containerButtonsModify a {
-  display: block;
-  width: 100%;
-  height: 100%; }
+.buttonModify input {
+  border: 0; }
 
 .articleContainer {
   margin-top: 20px;
@@ -238,6 +236,14 @@ textarea {
   text-align: left;
   width: 70%;
   margin: 10px auto 0 auto; }
+
+.formModifyComment {
+  display: none; }
+
+.commentContainer textarea {
+  display: block;
+  width: 100%;
+  height: 30vh; }
 
 .commentFooter {
   clear: both; }
