--- a/public/assets/css/scss/partials/comment.scss
+++ b/public/assets/css/scss/partials/comment.scss
@@ -32,6 +32,16 @@
   margin: 10px auto 0 auto;
 }
 
+.formModifyComment{
+  display: none;
+}
+
+.commentContainer textarea{
+  display: block;
+  width: 100%;
+  height: 30vh;
+}
+
 .commentFooter{
   clear: both;
 }
