--- a/views/userPage.ejs
+++ b/views/userPage.ejs
@@ -33,7 +33,9 @@
 
 </div>
 
-<script src="/assets/js/articlesCountHeight.js"></script>
-<script src="/assets/js/userModifyIntroduce.js"></script>
+<script type="text/javascript" src="/assets/js/articlesCountHeight.js"></script>
+<script type="text/javascript" src="/assets/js/userModifyIntroduce.js"></script>
+<script type="text/javascript" src="/assets/js/modifyContentForm.js"></script>
+
 
 <%- include partials/footer %>
