--- a/views/indexPage.ejs
+++ b/views/indexPage.ejs
@@ -6,7 +6,7 @@
         <input id="password" name="password" required type="password" placeholder="password">
         <div class="formularButtons">
             <input id="loginButton" class="button" type="submit" value="Login">
-            <input id="signinLink" class="button" type="button" value="Sign In">
+            <div id="signinLink" class="button"><a href="/signin" class="integratedFormularLink">Sign In</a></div>
         </div>
     </form>
     <a id="forgetPass" href="">Don't remember Password ?</a>
