--- a/views/signinPage.ejs
+++ b/views/signinPage.ejs
@@ -4,7 +4,7 @@
     <form id="inscription" class="entryForm" method="post" action="/signin">
         <input id="username" title="username" name="username" required type="text" placeholder="username">
         <input id="password" title="password" name="password" required type="password" placeholder="type a password">
-        <input id="repassword" title="repassword" name="repassword" required type="repassword" placeholder="retype your password">
+        <input id="repassword" title="repassword" name="repassword" required type="password" placeholder="retype your password">
         <input id="mail" title="mail" name="mail" required type="email" placeholder="type your mail">
         <div class="formularButtons">
             <input id="imgProfil" title="Choose a profil picture" name="imgProfil" required type="file">
