--- a/public/assets/css/scss/pages/indexPage.scss
+++ b/public/assets/css/scss/pages/indexPage.scss
@@ -8,6 +8,20 @@
 }
 #signinLink{
   background-color: indianred;
+
+  width: 40%;
+  height: 10vh;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+}
+
+.integratedFormularLink{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #forgetPass{
