--- a/public/assets/css/scss/partials/article.scss
+++ b/public/assets/css/scss/partials/article.scss
@@ -49,6 +49,17 @@
 }
 
 //CONTENT
+.formModifyArticle{
+  display: none;
+}
+
+.articleContainer textarea{
+  display: block;
+  width: 70%;
+  height: 30vh;
+}
+
+
 .articleContainer{
   margin-top: 20px;
   margin-bottom: 20px;
