--- a/views/clientPage.ejs
+++ b/views/clientPage.ejs
@@ -1,7 +1,8 @@
 <%- include partials/header %>
 
 <div id="mainClient" class="main">
-    <form id="modifClient" class="entryForm" method="post" action="">
+    <form id="modifClient" class="entryForm" method="post" action="/client">
+        <input type="hidden" name="_method" value="PUT">
         <input id="username" title="username" name="username" type="text" value="<%=user.username%>">
         <input id="mail" title="mail" name="mail" type="email" value="<%=user.mail%>">
         <input id="birthday" title="birthday" name="birthday" type="date" value=
@@ -14,8 +15,8 @@
         <input id="repassword" title="repassword" name="repassword" type="password" placeholder="retype your password">
 
         <div class="formularButtons">
-            <input id="imgProfil" title="Choose a profil picture" name="imgProfil" type="file">
-            <input id="imgCover" title="Choose a cover picture" name="imgCover" type="file">
+            <input id="imgProfil" title="Choose a profil picture" name="profilPic" type="file">
+            <input id="imgCover" title="Choose a cover picture" name="coverPic" type="file">
             <input id="applyButton" class="button" type="submit" value="Apply">
         </div>
     </form>
