--- a/views/partials/article.ejs
+++ b/views/partials/article.ejs
@@ -15,9 +15,9 @@
             <div class="containerButtonsModify">
                 <%if(article.userId == client.userId || client.admin != 0){%>
 
-                    <form class="articlePut buttonModify button" method="post" action="/put">
-                        <input class="img imgPut" type="submit" value="">
-                    </form>
+                <div id="articleButtonModify<%=article.id%>" class="articlePut buttonModify button" onclick="toggleFormModify(<%=article.id%>, 'article')">
+                    <div class="img imgPut"></div>
+                </div>
 
                     <form class="articleDel buttonModify button" method="post" action="/posts">
                         <input type="hidden" name="_method" value="DELETE">
@@ -35,9 +35,18 @@
     </div>
 
     <div class="articleContainer">
-        <div class="articleContent">
+        <div id="articleContent<%=article.id%>" class="articleContent">
             <%=article.content%>
         </div>
+        <form id="articleFormModify<%=article.id%>" class="formModifyArticle" method="post" action="/posts">
+            <input type="hidden" name="_method" value="PUT">
+            <input type="hidden" name="_table" value="article">
+            <input type="hidden" name="_id" value="<%=article.id%>">
+            <input type="hidden" name="_owner" value="<%=article.userId%>">
+            <input title="title" type="text" name="titleModify" value="<%=article.title%>">
+            <textarea id="textareaModify<%=article.id%>" name="contentModify"><%=article.content%></textarea>
+            <input type="submit" value="OK">
+        </form>
     </div>
 
     <div class="articleFoot">
