--- a/views/signinPage.ejs
+++ b/views/signinPage.ejs
@@ -7,7 +7,7 @@
         <input id="repassword" title="repassword" name="repassword" required type="password" placeholder="retype your password">
         <input id="mail" title="mail" name="mail" required type="email" placeholder="type your mail">
         <div class="formularButtons">
-            <input id="imgProfil" title="Choose a profil picture" name="imgProfil" required type="file">
+            <input id="imgProfil" title="Choose a profil picture" name="profilPic" required type="file">
             <input id="signinButton" class="button" type="submit" value="Sign In">
         </div>
     </form>
